Added featured section

--- a/templates/index.liquid
+++ b/templates/index.liquid
@@ -1,1 +1,6 @@
+{% section 'banner-section' %}
+{% section 'featured-section' %}
 <h1>Hello World</h1>
+{% for product in collections.all.products %}
+  {{ product }}
+{% endfor %}
